--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,22 @@
+
+html {
+    font-size:1.0em;
+    position: relative;
+    min-height: 100%;
+    min-width:100%;
+  }
+
+
 body {
     background-color: #000;
-    padding-top: 20px;
+    padding-top: 0px;
     font-family: Verdana, Geneva, 'Tahoma', sans-serif;
     color: white;
     background: url('../images/bg3.jpg') no-repeat;
     background-size: cover;
+    background-position:bottom;
+    min-height:100vh;
+    margin-bottom: 60px; /* Margin bottom by footer height */
     
 }
 .container { 
@@ -22,6 +34,7 @@ h4,h5,h6 {
 
 #titleImg{
     width:80%;
+    padding:5px 0px;
 }
 
 #currentWord {
@@ -35,11 +48,31 @@ h4,h5,h6 {
     padding-top: 20px;
     border: 2px solid #fff;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 0px;
     min-height: 500px;
     background-color: rgba(0, 40, 104, .7);
+    margin-bottom:40px;
 }
 
-/* header{
-    background:rgba(255, 255, 255, .5);
-} */
+ /* .contentCol:nth-child(2n){
+    margin-bottom:40px;
+}  */
+
+ header{
+    background:rgba(255, 255, 255, .1);
+} 
+
+.contentWrap{
+    padding:0;
+}
+
+.footer{
+    background:rgba(255, 255, 255, .4);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px; /* Set the fixed height of the footer here */
+    color:#002868;
+    font-size:.9em;
+    padding
+}
