--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,15 @@ body {
             width:100%;
         }
         #directionsText{
-            font-size:1.6em;
+            font-size:1.3em;
+        }
+
+        #guessThePlayer{
+            font-size:1.5em;
+        }
+
+        #winsTotalContain, #guessesRemainingContain, #lettersGuessedTitle{
+            font-size:.8em;
         }
 
     }
